Integrate OpenF1 weather sync

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,11 @@ spring.jpa.properties.hibernate.format_sql=true
 # Server Configuration
 server.port=8080
 
+# OpenF1 Integration
+openf1.api.base-url=https://api.openf1.org/v1
+openf1.weather.default-meeting-key=1208
+openf1.weather.refresh-ms=300000
+
 # JWT Configuration
 jwt.secret=mySecretKey123456789012345678901234567890
 jwt.expiration=86400000
