Add OpenF1 driver sync

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,12 @@ server.port=8080
 openf1.api.base-url=https://api.openf1.org/v1
 openf1.weather.default-meeting-key=1208
 openf1.weather.refresh-ms=300000
+openf1.cardata.default-meeting-key=1208
+openf1.cardata.default-driver-number=55
+openf1.cardata.refresh-ms=60000
+openf1.driver.default-meeting-key=1208
+openf1.driver.default-driver-number=55
+openf1.driver.refresh-ms=300000
 
 # JWT Configuration
 jwt.secret=mySecretKey123456789012345678901234567890
