fix: Improve Swagger documentation and resolve OpenF1 API errors
- Add detailed Swagger annotations to WeatherDto and CarDataDto
- Include Korean descriptions and example values for all fields
- Fix OpenF1 API 422 errors by adding session key parameters
- Add scheduler disable option for problematic endpoints
- Create TestController for manual API testing and health checks
- Improve API documentation with field descriptions and examples

Features:
- Enhanced Swagger UI with complete field documentation
- Resolved 'too much data' errors from OpenF1 API
- Manual testing endpoints for debugging
- Better error handling and logging
- Configurable scheduler activation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,9 @@ openf1.weather.default-meeting-key=1208
 openf1.weather.refresh-ms=300000
 openf1.cardata.default-meeting-key=1208
 openf1.cardata.default-driver-number=55
+openf1.cardata.default-session-key=9158
 openf1.cardata.refresh-ms=60000
+openf1.cardata.scheduler.enabled=false
 openf1.driver.default-meeting-key=1208
 openf1.driver.default-driver-number=55
 openf1.driver.refresh-ms=300000
